--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
