--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.23.1",
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^10.0.5",
